# EL

./: .gitignore  .project  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
bytecodecompiler/: BytecodeCompiler.hpp  CMakeLists.txt  EL.g4  Main.cpp
bytecodes/: Bytecodes.cpp  Bytecodes.hpp  CMakeLists.txt
cmake/modules/: ELDetectCompilerInformation.cmake  ExternalAntlr4Cpp.cmake  ExternalOMR.cmake  FindANTLR.cmake
cmake/modules/toolcfg/: gnu.cmake  msvc.cmake  xlc.cmake
demo/: CMakeLists.txt  DemoHelpers.cpp  DemoHelpers.hpp  DemoInterpreter.cpp  DemoInterpreter.hpp  DemoMethod.cpp  DemoMethod.hpp  Main.cpp
examples/: example.el  perf_constant_loop_constant_addition.el  perf_dynamic_loop_constant_addition.el  perf_gcd.el  perf_iterative_fib.el  perf_recursive_fib.el  test.el  test2.el  test3.el  test4.el  test5.el  test6.el  test_call.el  test_jmpg.el  test_jmpl.el  test_print_string.el  test_push_constant.el
helpers/: BytecodeHelpers.cpp  BytecodeHelpers.hpp  CMakeLists.txt  Helpers.cpp  Helpers.hpp  InterpreterTypeDictionary.hpp
jpoint/: CMakeLists.txt  JPointHelpers.cpp  JPointInterpreter.cpp  JPointInterpreter.hpp  JPointMethod.cpp  JPointMethod.hpp  Main.cpp
parser/: CMakeLists.txt  ELParser.cpp  ELParser.hpp
runtime/: CInterpreter.cpp  CInterpreter.hpp  CMInterpreterMethod.cpp  CMInterpreterMethod.hpp  CMakeLists.txt  EL.hpp  ELConfig.h.in  IBInterpreter.cpp  IBInterpreter.hpp  JBInterpreter.cpp  JBInterpreter.hpp  Main.cpp
